--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_weight="1">
+        android:layout_weight="0.3">
 
 <!--    Back Button-->
         <ImageButton
@@ -57,11 +57,11 @@
         android:id="@+id/songImgPA"
         android:layout_width="280dp"
         android:layout_height="280dp"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:padding="5dp"
         android:src="@drawable/music_player_icon_slash_screen"
         app:shapeAppearanceOverlay="@style/curved"
-        app:strokeColor="@color/purple_100"
+        app:strokeColor="@color/purple_10"
         app:strokeWidth="5dp"/>
 
 
@@ -76,8 +76,71 @@
         android:textSize="25sp"
         android:textColor="?colorOnPrimary"
         android:gravity="center"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:textIsSelectable="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
+        android:layout_weight="0">
+
+<!--        <TextView-->
+<!--            android:id="@+id/tvSeekBarStart"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:textColor="?colorOnPrimary"-->
+<!--            android:textSize="15sp"-->
+<!--            android:text="@string/start_tv"-->
+<!--            android:gravity="center"/>-->
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/seekBarPA"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:thumbTint="@color/pink"
+            android:progressTint="@color/cool_pink"
+            tools:ignore="NestedWeights" />
+
+<!--        <TextView-->
+<!--            android:id="@+id/tvSeekBarEnd"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:textColor="?colorOnPrimary"-->
+<!--            android:textSize="15sp"-->
+<!--            android:text="@string/end_tv"-->
+<!--            android:gravity="center"/>-->
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp">
+
+        <TextView
+            android:id="@+id/tvSeekBarStart"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:textColor="?colorOnPrimary"
+            android:textSize="15sp"
+            android:text="@string/start_tv"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/tvSeekBarEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:textColor="?colorOnPrimary"
+            android:textSize="15sp"
+            android:text="@string/end_tv"
+            android:gravity="center"/>
+
+    </FrameLayout>
 
 <!--    Floating Buttons for Previous, Pause & Next-->
     <LinearLayout
@@ -85,8 +148,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="10dp"
-         android:gravity="center"
-        android:layout_weight="1">
+        android:gravity="center"
+        android:layout_weight="0">
 
 <!--        Previous Button-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -96,6 +159,7 @@
             app:icon="@drawable/previous_icon"
             android:backgroundTint="@color/pink"
             app:iconTint="@color/white"
+            android:outlineProvider="none"
             app:iconSize="40dp"/>
 
 <!--        Play & Pause Button-->
@@ -104,11 +168,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/pause_icon"
-            app:iconSize="50dp"
+            app:iconSize="40dp"
             android:layout_marginHorizontal="25dp"
             app:shapeAppearanceOverlay="@style/curved"
+            android:outlineProvider="none"
             android:backgroundTint="@color/pink"
             app:iconTint="@color/white"/>
+
 
 <!--        Next Button-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -118,43 +184,15 @@
             app:icon="@drawable/next_icon"
             android:backgroundTint="@color/pink"
             app:iconTint="@color/white"
+            android:outlineProvider="none"
             app:iconSize="40dp"/>
+
+
 
     </LinearLayout>
 
 <!--    Seekbar & TextViews for it-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:orientation="horizontal"
-        android:layout_margin="20dp"
-        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/tvSeekBarStart"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="?colorOnPrimary"
-            android:textSize="15sp"
-            android:text="@string/start_tv"
-            android:gravity="center"/>
-
-        <androidx.appcompat.widget.AppCompatSeekBar
-            android:id="@+id/seekBarPA"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:ignore="NestedWeights" />
-
-        <TextView
-            android:id="@+id/tvSeekBarEnd"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="?colorOnPrimary"
-            android:textSize="15sp"
-            android:text="@string/end_tv"
-            android:gravity="center"/>
-    </LinearLayout>
 
 <!--    Last Row for Various Player Options-->
     <LinearLayout
