--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -32,19 +32,9 @@
         android:backgroundTint="?attr/themeColor"
         android:layout_centerVertical="true"
         app:iconSize="40dp"
+        android:outlineProvider="none"
         android:layout_marginEnd="10dp"/>
 
-<!--    <ImageView-->
-<!--        android:id="@+id/playPauseBtnNP"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:src="@drawable/play_icon"-->
-<!--        app:tint="?colorOnPrimary"-->
-<!--        android:padding="10dp"-->
-<!--        android:background="?attr/themeColor"-->
-<!--        android:layout_centerVertical="true"-->
-<!--        android:layout_toStartOf="@id/nextBtnNP"-->
-<!--        android:layout_marginHorizontal="5dp" />-->
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/playPauseBtnNP"
@@ -55,8 +45,12 @@
         android:backgroundTint="?attr/themeColor"
         android:layout_centerVertical="true"
         app:iconSize="40dp"
+        android:outlineProvider="none"
         android:layout_toStartOf="@id/nextBtnNP"
         android:layout_marginHorizontal="5dp"/>
+
+
+
     <TextView
         android:id="@+id/songNameNP"
         android:layout_width="match_parent"
@@ -65,7 +59,7 @@
         android:textSize="18sp"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:gravity="center"
+        android:gravity="center|start"
         android:layout_toStartOf="@id/playPauseBtnNP"
         android:layout_toEndOf="@id/songImgNP"
         android:ellipsize="marquee"
